--- a/datemark.html
+++ b/datemark.html
@@ -226,10 +226,11 @@
                 <iframe 
                     width="560" 
                     height="315" 
-                    src="https://www.youtube.com/watch?v=C5LxxDjX6CQ" 
-                    title="Datemark Demo" 
+                    src="https://www.youtube.com/embed/C5LxxDjX6CQ?si=v5PyEeyn6DlD-ki9" 
+                    title="YouTube video player" 
                     frameborder="0" 
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    referrerpolicy="strict-origin-when-cross-origin" 
                     allowfullscreen>
                 </iframe>
             </div>
