--- a/datemark.html
+++ b/datemark.html
@@ -33,15 +33,14 @@
             width: 120px;
             height: 120px;
             margin: 0 auto 30px;
-            background: white;
-            border-radius: 24px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 64px;
-            font-weight: bold;
-            color: #c75b9b;
             box-shadow: 0 10px 40px rgba(0,0,0,0.2);
+            border-radius: 24px;
+        }
+
+        .logo img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
         }
 
         h1 {
@@ -211,7 +210,9 @@
 <body>
     <div class="hero">
         <div class="container">
-            <div class="logo">D</div>
+            <div class="logo">
+                <img src="logo.png" alt="Datemark Logo">
+            </div>
             <h1>Datemark</h1>
             <p class="tagline">Transform any webpage into calendar events with just a click</p>
             <a href="https://chromewebstore.google.com/detail/datemark/aoldddfllaacoiihcnjhkhljoaoogabc" class="cta-button">Add to Chrome - It's Free</a>
