Add privacy policy link

--- a/datemark.html
+++ b/datemark.html
@@ -310,7 +310,8 @@
             <p style="margin-bottom: 15px;">Made with care for everyone who's tired of manually adding events to their calendar</p>
             <p>
                 <a href="https://github.com/FedericoBarusolo/datemark/tree/main" target="_blank">GitHub</a> | 
-                <a href="mailto:infodatemark@gmail.com">Contact</a>
+                <a href="mailto:infodatemark@gmail.com">Contact</a> | 
+                <a href="https://datemarkextension.com/privacy_policy" target="_blank">Privacy Policy</a>
             </p>
             <p style="margin-top: 20px; font-size: 14px; opacity: 0.8;">© 2025 Datemark. All rights reserved.</p>
         </div>
